--- a/ansible-scripts/installTomcat.yaml
+++ b/ansible-scripts/installTomcat.yaml
@@ -63,7 +63,7 @@
           User=ec2-user
           Group=ec2-user
 
-          Environment="JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))"
+          Environment="JAVA_HOME=/opt/java-17"
           Environment="CATALINA_PID=/opt/tomcat/temp/tomcat.pid"
           Environment="CATALINA_HOME=/opt/tomcat"
           Environment="CATALINA_BASE=/opt/tomcat"
